--- a/examples/family/conf/parents/defaults.yaml
+++ b/examples/family/conf/parents/defaults.yaml
@@ -1,3 +1,3 @@
 # This defaults configuration file demonstrates how to set a default property value in
 # the migrated record.
-Address.state: IL
+Household.address.state: IL
